objects/APTS_Stage_Config_LineItem__c.object
<CustomObject>
    <fields>
        <fullName>APTS_ABB_Source_Location_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Location Id</label>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Stage Config Line Item</relationshipLabel>
        <relationshipName>Stage_Config_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Account_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stage Config Line Item</relationshipLabel>
        <relationshipName>Stage_Config_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_BAL_ID_From_External_Configurator__c</fullName>
        <label>Activity Location Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Cost_Config_Factory__c</fullName>
        <label>Base Cost (Factory)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Cost_Configurator__c</fullName>
        <label>Base Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ERP_LN_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ERP_Ln_Top_Article__c</fullName>
        <label>Top Article</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ERP_Ln_Warehouse_Identifier__c</fullName>
        <label>Warehouse Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_Configurator_Product_Desc__c</fullName>
        <label>Configuration Desc</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_External_Configurator_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_Configurator_Type__c</fullName>
        <label>Configurator Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Record Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Factory_Currency__c</fullName>
        <label>Factory Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Full_Cost_Config_Factory__c</fullName>
        <label>Full Cost (Factory)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Full_Cost_Configurator__c</fullName>
        <label>Full Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Original_Ext_Configurator_Line_ID__c</fullName>
        <label>Configuration ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Production_Cost_Config_Factory__c</fullName>
        <label>Production Cost (Factory)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Production_Cost_Configurator__c</fullName>
        <label>Production Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Proposal_Line_Item__c</fullName>
        <label>Proposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Stage Config Line Item</relationshipLabel>
        <relationshipName>Stage_Config_Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Send2ERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send2ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Service_Location_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Location Id</label>
        <referenceTo>Apttus_Config2__ServiceLocation__c</referenceTo>
        <relationshipLabel>Stage Config Line Item</relationshipLabel>
        <relationshipName>Stage_Config_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Status_Details__c</fullName>
        <formula>&apos;{&quot;MUST_CONFIG&quot;:0,&quot;DF_PND&quot;:0,&quot;RQ_OPT&quot;:0,&quot;RQ_ATTR&quot;:0,&quot;MINMAX_VAL”:0,”CONST_PND&quot;:0,&quot;REVAL_PND&quot;:0,&quot;OPT_RQ_ATTR&quot;:0}&apos;</formula>
        <label>Constant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Tax_Percent__c</fullName>
        <label>Sales Tax Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Price_Configurator__c</fullName>
        <label>Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Stage Config Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCLI-{0000000}</displayFormat>
        <label>Stage Config Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Config Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>